wrapping progress cover to avoid background update flickers

--- a/src/components/codeCell.css
+++ b/src/components/codeCell.css
@@ -1,11 +1,16 @@
+.progress-cover-wrapper {
+    flex-grow: 1;
+    height: 100%;
+    background-color: white;
+}
+
 .progress-cover {
     display: flex;
-    flex-grow: 1;
     align-items: center;
+    width: 100%;
     height: 100%;
     padding-right: 7%;
     padding-left: 7%;
-    background-color: white;
     animation: fadeIn 0.7s;
 }
 
